2016-06-29 Will Breaden Madden <w.bm@cern.ch>
        * minor tidy runAsymptoticCLs.C

2016-28-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * stat-only fit option added (NP fixed to nominal fit values, then data re-fitted): use Fit option fStatOnlyFit (even from copmmand line)
        * fixed Asimov creation for combined fit (in MultiFit)
        * runAsymptoticCLs made faster changing some default options (please change these options back to default in case you want more accurate results)
        * better .tex yield tables, with the usage of \num and the possibility to specify TexLabel for Regions and TexTitle for samples
        
2016-23-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * more options in MultiFit
        
2016-19-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Multi-core fit implemented: use "NumCPU: <N>" under "Fit". Get <N> with grep -c ^processor /proc/cpuinfo
        
2016-17-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fix in "Variable" reading from config file (with ntuple inputs) to allow TTree::Draw special functions
        * Ranking plot including Normalisation Factors
        * Normalisation Factor titles propagated into plots
        
2016-15-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Error bars in Syst plots
        * InputName option added (to use histogram inputs with different name than the Job name)
        
2016-13-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixed autobin computation in presence of ghost samples

2016-08-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Categories in MultiFit Pull plot: use NPCategories: in MultiFit config
        
2016-06-06 Michele Pinamonti <michele.pinamonti@gmail.com>, Thomas Calvet <calvet@cppm.in2p3.fr>
        * Partial fix of weight systemtics on smmothed samples